--- a/site/blueprints/site.yml
+++ b/site/blueprints/site.yml
@@ -3,6 +3,8 @@ title: Site
 columns:
   - width: 1/2
     sections:
+      cases: sections/cases
+      practices: sections/practices
       albums: sections/albums
   - width: 1/2
     sections:
