--- a/site/blueprints/site.yml
+++ b/site/blueprints/site.yml
@@ -1,18 +1,47 @@
 title: Site
 
-columns:
-  - width: 1/2
-    sections:
-      cases: sections/cases
-      practices: sections/practices
-      albums: sections/albums
-  - width: 1/2
-    sections:
-      notes: sections/notes
-      pages:
-        type: pages
-        create: default
-        template:
-          - about
-          - home
-          - default
+
+tabs:
+  content:
+    label: Content
+    icon: text
+    columns:
+      - width: 1/2
+        sections:
+          cases: sections/cases
+          practices: sections/practices
+      - width: 1/2
+        sections:
+          notes: sections/notes
+          pages:
+            type: pages
+            create: default
+            template:
+              - about
+              - home
+              - default
+  settings:
+    label: Settings
+    icon: text
+    columns:
+      - width: 1/2
+        fields:
+          maintenance:
+            label: Maintenance
+            type: toggle
+            text: Enable Maintenance
+            translate: false
+      - width: 1/2
+        fields:
+          description:
+            label: Description
+            type:  textarea
+          keywords:
+            label: Keywords
+            type:  tags
+          ogimage:
+            label: Site Thumbnail
+            type:  url
+            help:  URL of the thumbnail that will represent your website on the social networks.
+            translate: false
+
