--- a/site/blueprints/pages/practice.yml
+++ b/site/blueprints/pages/practice.yml
@@ -30,12 +30,11 @@ columns:
           scenario: Scenario
           form: Form
       thumbnail:
-        type: files
-        multiple: false
-        translate: false 
-        template: cover
-        min: 1
-        max: 1
+            type: files
+            multiple: false
+            translate: false 
+            query: page.images
+
       description:
         type: textarea
         size: large
