--- a/site/blueprints/pages/case.yml
+++ b/site/blueprints/pages/case.yml
@@ -68,7 +68,7 @@ columns:
         info: "{{ file.dimensions }}"
         image:
           ratio: 5/4
-          cover: true
+          # cover: true
         min: 1
         size: small
         # sortBy: order asc
