--- a/site/blueprints/site.yml
+++ b/site/blueprints/site.yml
@@ -20,6 +20,7 @@ tabs:
               - about
               - home
               - default
+              - map
       - width: 1
         fields:
           practice-head:
