--- a/site/blueprints/pages/about.yml
+++ b/site/blueprints/pages/about.yml
@@ -22,6 +22,14 @@ columns:
             multiple: false
             translate: false 
             query: page.images
+
+          mapToggle:
+            label: Show global map
+            type: toggle
+
+          columnToggle:
+            label: Use columns for the text
+            type: toggle
             
           text:
             label: Text
