--- a/site/blueprints/pages/default.yml
+++ b/site/blueprints/pages/default.yml
@@ -22,6 +22,14 @@ fields:
     multiple: false
     translate: false 
     query: page.images
+
+  mapToggle:
+    label: Show global map
+    type: toggle
+
+  columnToggle:
+    label: Use columns for the text
+    type: toggle
     
   text:
     type: textarea
