--- a/site/blueprints/pages/practice.yml
+++ b/site/blueprints/pages/practice.yml
@@ -4,6 +4,14 @@ status:
   draft: true
   listed: true
 
+options:
+  status: 
+    *: false
+    admin: true
+  delete: 
+    *: false
+    admin: true
+
 columns:
   - width: 1/3
     sections:
