--- a/site/blueprints/pages/case.yml
+++ b/site/blueprints/pages/case.yml
@@ -135,6 +135,7 @@ columns:
           addresses:
             label: Addresses
             type: structure
+            translate: false
             fields: 
               map:
                 label: Location
