--- a/site/plugins/kirby-color/composer.json
+++ b/site/plugins/kirby-color/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "timoetting/kirby-color",
   "type": "plugin",
-  "version": "0.0.1",
-  "description": "",
+  "version": "1.0.0",
+  "description": "Kirby-Color is a color picker plugin for Kirby CMS v3.",
   "license": "MIT",
   "autoload": {
     "files": [
